begin work on tablet display. Ended with join button on nav bar, still must be positioned correctly

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -89,31 +89,43 @@ header .icon {
 header .mobile {
   display: none;
 }
+#button-med {
+  display: none;
+}
 @media only screen and (max-width: 760px) {
+  #button-med {
+    display: inline-block;
+    padding: .1875rem .5rem;
+    background-color: #9dc20b;
+    line-height: 1.6;
+    color: white;
+    margin: 0;
+  }
+
+}
+@media only screen and (max-width: 450px) {
+  #button-med {
+    display: none;
+  }
   header .desktop {
     display: none;
   }
-
   header .mobile {
     display: block;
     width: 100%;
   }
-
   header .content {
     padding: .5rem 0;
   }
-
   header .mobile ul {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
   }
-
   header .mobile li {
     padding: 0;
   }
-
   header .mobile .button {
     padding: .1875rem .5rem;
     background-color: #9dc20b;
